--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     },
     "typeRoots": ["./types"]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/pricing/page.tsx"],
+    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/pricing/page.tsx", "types/**/*.d.ts"],
   "exclude": ["node_modules"],
   "overrides": {
     "react-is": "^19.0.0-rc-69d4b800-20241021"
