--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "google": "link:@next/third-parties/google",
     "hast-util-to-jsx-runtime": "^2.3.2",
     "keen-slider": "^6.8.6",
+    "liquid-glass-react": "^1.1.1",
     "lucide-react": "^0.475.0",
     "motion": "^12.4.3",
     "next": "15.2.1",
@@ -44,6 +45,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
+    "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
     "react-simple-typewriter": "^5.0.1",
     "react-use-measure": "^2.1.7",
