--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "@radix-ui/react-tabs": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@retell/player-react": "^2.2.1",
+    "@types/crypto-js": "^4.2.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "dotted-map": "^2.2.3",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.7.4",
