--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
       "@/*": ["./*"]
     },
   },
-      "include": ["next-env.d.ts", "types/**/*.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+      "include": ["next-env.d.ts", "types/**/*.d.ts", "**/*.ts", "**/*.tsx", "**/*.d.ts", ".next/types/**/*.ts"],
   "exclude": ["node_modules"],
   "overrides": {
     "react-is": "^19.0.0-rc-69d4b800-20241021"
